--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 body
 {
-    background-color: #f8890a;
+    background-color: #212529;
     color: #55f80a;
     font-family: 'Nunito', sans-serif;
 }
