--- a/stylesheet.css
+++ b/stylesheet.css
@@ -240,7 +240,7 @@ td.desc-cell
   height: 100%;
   width: 80%;
   padding-top: 0;
-  padding-left: 35px;
+  padding-left: 5%;
 }
 
 p.desc-cell-text 
