--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,67 +1,3 @@
-/* latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAUi-qNiXg7eU0.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v15/S6u8w4BMUTPHjxsAXC-qNiXg7Q.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_FQftx9897sxZ.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v15/S6u_w4BMUTPHjxsI5wq_Gwftx9897g.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v15/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwaPGQ3q5d0N7w.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
 
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
@@ -76,7 +12,7 @@ a:hover {
 }
 
 body {
-  font-family: 'Inconsolata', monospace, sans-serif;
+  font-family: Lato, sans-serif;
   font-size: 20px;
 }
 
@@ -111,6 +47,12 @@ strong {
 }
 
 heading {
+  font-family: inherit;
+  font-size: 24px;
+}
+navbar-heading
+{
+  margin-right: 16px;
   font-family: inherit;
   font-size: 24px;
 }
@@ -157,6 +99,7 @@ span.highlight {
 
 .hidden {
     display: none;
+    opacity: 0;
 }
 
 a {
@@ -178,20 +121,14 @@ a {
     border-left-style: solid;
 }
 
-#port {
-    border-radius: 15px;
-    overflow: hidden;
-    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
-}
-
-
 
 a.navbar-links
 {
   font-size: 20px;
-  font-weight: 800;
+  /* font-weight: 900; */
   color: rgb(78, 78, 78);
   text-decoration: none;
+  font-family: inherit;
 }
 
 a.navbar-links:hover
@@ -202,32 +139,46 @@ a.navbar-links:hover
 
 a.navbar-links.active
 {
-  color: #e88d2f;
+  /* color: #e88d2f; */
+  color: #000000;
+  font-weight: 900;
   text-decoration: underline;
+
 }
 
 img.image-table
 {
   width: 100%;
-  border-radius: 10%;
+  border-radius: 4%;
 }
 
 img.image-table:hover
 {
-  opacity: 0.5;
-
+  opacity: 0.7;
 }
 
 table.content-table
 {
   border-spacing: 0px 50px;
+  transition: fadeIn 0.5s ease-in-out;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0.3;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 
 td.image-cell
 {
   /* height: 100%; */
   border: 2px solid;
-  border-radius: 10%;
+  border-radius: 5%;
   border-color: #1772d0;
   vertical-align: middle;
   display: flex;
@@ -235,8 +186,20 @@ td.image-cell
   justify-content: center;
 }
 
-td.desc-cell
+td.image-cell:hover
 {
+  border-color: #e88d2f;
+}
+
+
+td.desc-cell {
+  height: 100%;
+  width: 80%;
+  padding-top: 0;
+  padding-left: 35px;
+}
+
+tr.desc-cell {
   height: 100%;
   width: 80%;
   padding-top: 0;
@@ -245,11 +208,32 @@ td.desc-cell
 
 p.desc-cell-text 
 {
-  font-size: 16px; 
+  font-size: 18px; 
   text-align: justify;
   line-height: 1.35;
 }
 
 p.desc-cell-text-small {
-  font-size: 13px;
+  font-size: 15px;
+  font-style: italic;
+  text-align: right;
+}
+
+
+a.footer-link
+{
+  font-size: 16px;
+  text-decoration: none;
+  font-family: inherit;
+}
+
+table.desc-table
+{
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+td.desc-cell-secondary
+{
+  width: 80%;
 }
