--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,7 +169,7 @@ a.navbar-links.active
 
 }
 
-/* img.image-table {
+img.image-table {
   width: 100%;
   border-radius: 5%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -179,7 +179,7 @@ a.navbar-links.active
 img.image-table:hover {
   box-shadow: 0 0px 16px #e88d2f;
   transform: scale(1.05);
-} */
+}
 
 
 
@@ -277,6 +277,14 @@ td.desc-cell-secondary
 {
   width: 80%;
   text-align: left;
+}
+
+td.cell-header
+{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  width: 63%;
+  vertical-align: middle;
 }
 
 
