--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,6 +182,21 @@ img.image-table:hover {
   transform: scale(1.05);
 }
 
+img.pfp
+{
+  width: 100%;
+  height: 100%;
+  border-radius: 4%;
+  border: solid 1px #dedede07;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+
+img.pfp:hover {
+  box-shadow: 0 0px 16px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+  cursor: pointer;
+}
 
 
 
